set backend version via cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,12 @@ find_package(Phonon REQUIRED)
 add_definitions(${QT_DEFINITIONS})
 include_directories(${QT_INCLUDES} ${PHONON_INCLUDES})
 
+set(PHONON_GST_MAJOR_VERSION "4")
+set(PHONON_GST_MINOR_VERSION "4")
+set(PHONON_GST_PATCH_VERSION "4")
+set(PHONON_GST_VERSION "${PHONON_GST_MAJOR_VERSION}.${PHONON_GST_MINOR_VERSION}.${PHONON_GST_PATCH_VERSION}")
+add_definitions(-DPHONON_GST_VERSION="${PHONON_GST_VERSION}")
+
 if (Q_WS_X11)
     add_subdirectory(gstreamer)
 endif (Q_WS_X11)
