SVN_SILENT made messages (.desktop file)

--- a/ds9/ds9.desktop
+++ b/ds9/ds9.desktop
@@ -12,6 +12,7 @@ Name=DirectShow9
 Name[bg]=DirectShow9
 Name[ca]=DirectShow9
 Name[ca@valencia]=DirectShow9
+Name[cs]=DirectShow9
 Name[da]=DirectShow9
 Name[de]=DirectShow9
 Name[el]=DirectShow9
@@ -35,6 +36,7 @@ Name[ku]=DirectShow9
 Name[lt]=DirectShow9
 Name[lv]=DirectShow9
 Name[nb]=DirectShow9
+Name[nds]=DirectShow9
 Name[nl]=DirectShow9
 Name[nn]=DirectShow9
 Name[pa]=ਡਾਇਰੈਕਸ਼ੋ9
@@ -60,6 +62,7 @@ Comment=Phonon DirectShow9 backend
 Comment[bg]=Phonon DirectShow9
 Comment[ca]=Dorsal DirectShow9 del Phonon
 Comment[ca@valencia]=Dorsal DirectShow9 del Phonon
+Comment[cs]=Podpůrná vrstva DirectShow9 pro Phonon
 Comment[da]=DirectShow9-backend til Phonon
 Comment[de]=Phonon-Treiber für DirectShow9
 Comment[el]=Σύστημα υποστήριξης DirectShow9 του Phonon
@@ -82,6 +85,7 @@ Comment[ku]=Binesaza Phonon DirectShow9
 Comment[lt]=Phonon DirectShow9 galinė sąsaja
 Comment[lv]=Phonon DirectShow9 aizmugure
 Comment[nb]=Phonon-motor for DirectShow9
+Comment[nds]=DirectShow9-Hülpprogramm Phonon
 Comment[nl]=DirectShow9-backend (Phonon)
 Comment[nn]=Phonon-motor for DirectShow9
 Comment[pa]=ਫੋਨੋਨ ਡਾਇਰੈਕਟਸ਼ੋ9 ਬੈਕਐਂਡ
