--- a/gstreamer/gstreamer.desktop
+++ b/gstreamer/gstreamer.desktop
@@ -62,7 +62,7 @@ Comment=Phonon GStreamer backend
 Comment[bg]=Phonon GStreamer
 Comment[ca]=Dorsal GStreamer del Phonon
 Comment[ca@valencia]=Dorsal GStreamer del Phonon
-Comment[cs]=Phonon GStreamer backend
+Comment[cs]=Podpůrná vrstva GStreamer pro Phonon
 Comment[da]=GStreamer-backend til Phonon
 Comment[de]=Phonon-Treiber für GStreamer
 Comment[el]=Σύστημα υποστήριξης GStreamer του Phonon
