--- a/phonon/tests/fakebackend/fake.desktop
+++ b/phonon/tests/fakebackend/fake.desktop
@@ -34,6 +34,7 @@ Name[ku]=Lêp
 Name[lt]=Netikras
 Name[lv]=Neīsts
 Name[nb]=Falsk
+Name[nds]=Namaakt
 Name[nl]=Fake
 Name[nn]=Falsk
 Name[pa]=ਫ਼ਰਜ਼ੀ
@@ -58,6 +59,7 @@ Comment=Testing Backend
 Comment[bg]=Тестване
 Comment[ca]=Dorsal de proves
 Comment[ca@valencia]=Dorsal de proves
+Comment[cs]=Testovací podpůrná vrstva
 Comment[da]=Test-backend
 Comment[de]=Treiber für Testzwecke
 Comment[el]=Δοκιμαστικό σύστημα υποστήριξης
@@ -81,6 +83,7 @@ Comment[ku]=Ceribandina Binesazê
 Comment[lt]=Bandomoji galinė sąsaja
 Comment[lv]=Testēšanas aizmugure
 Comment[nb]=Testmotor
+Comment[nds]=Utprobeer-Hülpprogramm
 Comment[nl]=Testbackend
 Comment[nn]=Testmotor
 Comment[pa]=ਟੈਸਟਿੰਗ ਬੈਕਐਂਡ
