--- a/phonon/experimental/videocapturedevice/videocapturetestapp/videocapturetestapp.desktop
+++ b/phonon/experimental/videocapturedevice/videocapturetestapp/videocapturetestapp.desktop
@@ -28,6 +28,7 @@ GenericName[ku]=Sepana Ceribandina Girtina Vîdeoyê
 GenericName[lt]=Video įrašymo bandomoji programa
 GenericName[lv]=Video tveršanas testa programma
 GenericName[nb]=Testprogram for videoopptak
+GenericName[nds]=Video-Opnehm-Testprogramm
 GenericName[nl]=Testprogramma voor video-opname
 GenericName[nn]=Testprogram for videoopptak
 GenericName[pa]=ਵੀਡਿਓ ਕੈਪਚਰ ਟੈਸਟ ਐਪਲੀਕੇਸ਼ਨ
@@ -76,6 +77,7 @@ Name[ku]=videocapturetestapp
 Name[lt]=videocapturetestapp
 Name[lv]=videocapturetestapp
 Name[nb]=videocapturetestapp
+Name[nds]=videocapturetestapp
 Name[nl]=videocapturetestapp
 Name[nn]=videocapturetestapp
 Name[pa]=videocapturetestapp
