--- a/xine/xine.desktop
+++ b/xine/xine.desktop
@@ -13,6 +13,7 @@ Name=Xine
 Name[bg]=Xine
 Name[ca]=Xine
 Name[ca@valencia]=Xine
+Name[cs]=Xine
 Name[da]=Xine
 Name[de]=Xine
 Name[el]=Xine
@@ -36,6 +37,7 @@ Name[ku]=Xine
 Name[lt]=Xine
 Name[lv]=Xine
 Name[nb]=Xine
+Name[nds]=Xine
 Name[nl]=Xine
 Name[nn]=Xine
 Name[pa]=ਜ਼ਾਈਨ
@@ -61,6 +63,7 @@ Comment=Phonon Xine backend
 Comment[bg]=Phonon през Xine
 Comment[ca]=Dorsal del Xine pel Phonon
 Comment[ca@valencia]=Dorsal del Xine pel Phonon
+Comment[cs]=Podpůrná vrstva Xine pro Phonon
 Comment[da]=Xine-backend til Phonon
 Comment[de]=Phonon-Treiber für Xine
 Comment[el]=Σύστημα υποστήριξης του Phonon Xine
@@ -83,6 +86,7 @@ Comment[ku]=Binesaza Phonon Xine
 Comment[lt]=Phonon Xine galinė sąsaja
 Comment[lv]=Phonon Xine aizmugure
 Comment[nb]=Xine-motor for Phonon
+Comment[nds]=Xine-Hülpprogramm Phonon
 Comment[nl]=Xine-backend (Phonon)
 Comment[nn]=Xine-motor for Phonon
 Comment[pa]=ਫੋਨੋਨ ਜ਼ਾਇਨ ਬੈਕਐਂਡ
