SVN_SILENT made messages (.desktop file)

--- a/phonon/tests/fakebackend/fake.desktop
+++ b/phonon/tests/fakebackend/fake.desktop
@@ -11,6 +11,7 @@ Name=Fake
 Name[bg]=Фалшиво
 Name[ca]=Fake
 Name[ca@valencia]=Fake
+Name[cs]=Falešná
 Name[da]=Fake
 Name[de]=Fake
 Name[el]=Εικονικό
