--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ option(USE_INSTALL_PLUGIN "Use GStreamer codec installation API" TRUE)
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 find_package(Phonon REQUIRED)
 add_definitions(${QT_DEFINITIONS})
-include_directories(${QT_INCLUDES} ${PHONON_INCLUDES})
+include_directories(${PHONON_INCLUDES} ${QT_INCLUDES})
 
 set(PHONON_GST_MAJOR_VERSION "4")
 set(PHONON_GST_MINOR_VERSION "4")
