--- a/ds9/ds9.desktop
+++ b/ds9/ds9.desktop
@@ -12,6 +12,7 @@ Name=DirectShow9
 Name[bg]=DirectShow9
 Name[ca]=DirectShow9
 Name[ca@valencia]=DirectShow9
+Name[cs]=DirectShow9
 Name[da]=DirectShow9
 Name[de]=DirectShow9
 Name[el]=DirectShow9
@@ -61,6 +62,7 @@ Comment=Phonon DirectShow9 backend
 Comment[bg]=Phonon DirectShow9
 Comment[ca]=Dorsal DirectShow9 del Phonon
 Comment[ca@valencia]=Dorsal DirectShow9 del Phonon
+Comment[cs]=Podpůrná vrstva DirectShow9 pro Phonon
 Comment[da]=DirectShow9-backend til Phonon
 Comment[de]=Phonon-Treiber für DirectShow9
 Comment[el]=Σύστημα υποστήριξης DirectShow9 του Phonon
