SVN_SILENT made messages (.desktop file)

--- a/xine/xine.desktop
+++ b/xine/xine.desktop
@@ -71,7 +71,7 @@ Comment[es]=Motor Xine para Phonon
 Comment[et]=Phononi Xine taustaprogramm
 Comment[eu]=Phonon Xine backend
 Comment[fi]=Phonon Xine-taustaohjelma
-Comment[fr]=Système de gestion Xine pour Phonon 
+Comment[fr]=Moteur Xine pour Phonon 
 Comment[ga]=Inneall Phonon Xine
 Comment[gl]=Infraestrutura de Xine para Phonon
 Comment[hsb]=Phonon Xine backend
