add videosink stub

--- a/gstreamer/CMakeLists.txt
+++ b/gstreamer/CMakeLists.txt
@@ -58,6 +58,7 @@ if (BUILD_PHONON_GSTREAMER)
       qwidgetvideosink.cpp
       streamreader.cpp
       videodataoutput.cpp
+      videosink.cpp
       videowidget.cpp
       volumefadereffect.cpp
       widgetrenderer.cpp
