seriously creepy code, to get the initial gobjects going

--- a/gstreamer/CMakeLists.txt
+++ b/gstreamer/CMakeLists.txt
@@ -58,7 +58,7 @@ if (BUILD_PHONON_GSTREAMER)
       qwidgetvideosink.cpp
       streamreader.cpp
       videodataoutput.cpp
-      videosink.cpp
+      videosink.c
       videowidget.cpp
       volumefadereffect.cpp
       widgetrenderer.cpp
