--- a/gstreamer/CMakeLists.txt
+++ b/gstreamer/CMakeLists.txt
@@ -54,12 +54,17 @@ if (BUILD_PHONON_GSTREAMER)
       qwidgetvideosink.cpp
       streamreader.cpp
       videodataoutput.cpp
-      videographicsobject.cpp
       videosink.c
       videowidget.cpp
       volumefadereffect.cpp
       widgetrenderer.cpp
       )
+
+    if(NOT PHONON_NO_GRAPHICSVIEW)
+        list(APPEND phonon_gstreamer_SRCS videographicsobject.cpp)
+    else()
+        add_definitions(-DPHONON_NO_GRAPHICSVIEW)
+    endif()
 
     if(PHONON_FOUND_EXPERIMENTAL)
         add_definitions(-DPHONON_EXPERIMENTAL)
