Use udev to enumerate video devices

--- a/gstreamer/CMakeLists.txt
+++ b/gstreamer/CMakeLists.txt
@@ -59,6 +59,11 @@ if (BUILD_PHONON_GSTREAMER)
       widgetrenderer.cpp
       )
 
+    if (UDEV_FOUND)
+      add_definitions(-DHAVE_UDEV)
+      include_directories(${UDEV_INCLUDE_DIR})
+    endif(UDEV_FOUND)
+
     if(NOT PHONON_NO_GRAPHICSVIEW)
         list(APPEND phonon_gstreamer_SRCS videographicsobject.cpp)
     else()
@@ -87,6 +92,9 @@ if (BUILD_PHONON_GSTREAMER)
    if(USE_INSTALL_PLUGIN)
        target_link_libraries(phonon_gstreamer ${GSTREAMER_PLUGIN_PBUTILS_LIBRARIES})
    endif(USE_INSTALL_PLUGIN)
+   if (UDEV_FOUND)
+     target_link_libraries(phonon_gstreamer ${UDEV_LIBRARIES})
+   endif (UDEV_FOUND)
    if(OPENGL_FOUND)
       qt5_use_modules(phonon_gstreamer OpenGL)
       target_link_libraries(phonon_gstreamer ${OPENGL_gl_LIBRARY})
