--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,11 @@ cmake_minimum_required(VERSION 2.8.6 FATAL_ERROR)
 option(USE_INSTALL_PLUGIN "Use GStreamer codec installation API" TRUE)
 
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+
 find_package(Phonon REQUIRED)
+macro_ensure_version("4.6.61" ${PHONON_VERSION} PHONON_FOUND)
+macro_log_feature(PHONON_FOUND "Phonon" "Core Library" "git://anongit.kde.org/phonon.git" TRUE "4.6.61")
+
 add_definitions(${QT_DEFINITIONS})
 include_directories(${PHONON_INCLUDES} ${QT_INCLUDES})
 
