--- a/gstreamer/CMakeLists.txt
+++ b/gstreamer/CMakeLists.txt
@@ -64,6 +64,11 @@ if (BUILD_PHONON_GSTREAMER)
       include_directories(${UDEV_INCLUDE_DIR})
     endif(UDEV_FOUND)
 
+    if (ALSA_FOUND)
+      add_definitions(-DHAVE_ALSA)
+      include_directories(${ALSA_INCLUDE_DIR})
+    endif(ALSA_FOUND)
+
     if(NOT PHONON_NO_GRAPHICSVIEW)
         list(APPEND phonon_gstreamer_SRCS videographicsobject.cpp)
     else()
@@ -95,6 +100,9 @@ if (BUILD_PHONON_GSTREAMER)
    if (UDEV_FOUND)
      target_link_libraries(phonon_gstreamer ${UDEV_LIBRARIES})
    endif (UDEV_FOUND)
+   if (ALSA_FOUND)
+     target_link_libraries(phonon_gstreamer ${ALSA_LIBRARIES})
+    endif (ALSA_FOUND)
    if(OPENGL_FOUND)
       qt5_use_modules(phonon_gstreamer OpenGL)
       target_link_libraries(phonon_gstreamer ${OPENGL_gl_LIBRARY})
