Fix missing OpenGL check in CMakeLists.txt

--- a/gstreamer/CMakeLists.txt
+++ b/gstreamer/CMakeLists.txt
@@ -84,9 +84,9 @@ if(PHONON_FOUND_EXPERIMENTAL)
     list(APPEND phonon_gstreamer_SRCS videodataoutput.cpp)
 endif(PHONON_FOUND_EXPERIMENTAL)
 
-if(OPENGL_FOUND)
+if (OPENGL_FOUND AND QT_QTOPENGL_FOUND)
     list(APPEND phonon_gstreamer_SRCS glrenderer.cpp)
-endif(OPENGL_FOUND)
+endif ()
 
 if(NOT WIN32)
   set(phonon_gstreamer_SRCS
