Fix finding OpenGL for good this time

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,8 @@ find_package(Phonon REQUIRED)
 macro_ensure_version("4.7.0" ${PHONON_VERSION} PHONON_FOUND)
 macro_log_feature(PHONON_FOUND "Phonon" "Core Library" "git://anongit.kde.org/phonon.git" TRUE "4.7.0")
 
+find_package(OpenGL)
+macro_log_feature(OPENGL_FOUND "OpenGL" "OpenGL support is required to compile the gstreamer backend for Phonon" "" FALSE)
 
 if(PHONON_BUILD_PHONON4QT5)
     find_package(Qt5OpenGL)
@@ -24,6 +26,10 @@ if(PHONON_BUILD_PHONON4QT5)
 else ()
     macro_log_feature(QT_QTOPENGL_FOUND "Qt4 OpenGL" "Qt4 OpenGL support is required to compile the gstreamer backend for Phonon" "" FALSE)
 endif()
+
+if (NOT QT_QTOPENGL_FOUND)
+    set(OPENGL_FOUND FALSE)
+endif ()
 
 add_definitions(${QT_DEFINITIONS})
 include_directories(${PHONON_INCLUDES} ${QT_INCLUDES})
@@ -43,8 +49,7 @@ find_package(GObject REQUIRED)
 find_package(LibXml2 REQUIRED)
 macro_log_feature(LIBXML2_FOUND "LibXml2" "LibXml2 is required to compile the gstreamer backend for Phonon" "http://xmlsoft.org/downloads.html" TRUE)
 
-find_package(OpenGL)
-macro_log_feature(OPENGL_FOUND "OpenGL" "OpenGL support is required to compile the gstreamer backend for Phonon" "" FALSE)
+
 
 add_subdirectory(gstreamer)
 
