Enable build of the X11 renderer if X11 can be found
Rather than build on all non WIN32 OS, search for X11 with and enable
the build of the renderer if it's available.

REVIEW https://git.reviewboard.kde.org/r/124999/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,7 +49,9 @@ find_package(GObject REQUIRED)
 find_package(LibXml2 REQUIRED)
 macro_log_feature(LIBXML2_FOUND "LibXml2" "LibXml2 is required to compile the gstreamer backend for Phonon" "http://xmlsoft.org/downloads.html" TRUE)
 
-
+set(REQUIRED_QT_VERSION 5.2.0)
+macro_optional_find_package(Qt5X11Extras ${REQUIRED_QT_VERSION})
+macro_log_feature(Qt5X11Extras_FOUND "Qt5X11Extras" "Qt5X11Extras is needed for the x11renderer" "http://doc.qt.io/qt-5/qtx11extras-index.html" FALSE "${REQUIRED_QT_VERSION}")
 
 add_subdirectory(gstreamer)
 
