build, install and use translations when building with ECM
Summary:
l10n was entirely broken ever since kde-runtime went away. thanks to some
reshuffling this is an easy fix now. we need only use the appropriate
ECM macros.

(this includes ECMPoQmTools explicitly to remain buildtime compatible
 with older phonons, despite newer phonons including the file)

Test Plan: builds, installs, warning when uninstalling gstreamer1.0-plugins-good is localized when using a suitable LANGUAGE

Reviewers: dvratil

Reviewed By: dvratil

Differential Revision: https://phabricator.kde.org/D22273

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,10 @@ if(PHONON_BUILD_PHONON4QT5)
     set(REQUIRED_QT_VERSION 5.2.0)
     macro_optional_find_package(Qt5X11Extras ${REQUIRED_QT_VERSION})
     macro_log_feature(Qt5X11Extras_FOUND "Qt5X11Extras" "Qt5X11Extras is needed for the x11renderer" "http://doc.qt.io/qt-5/qtx11extras-index.html" FALSE "${REQUIRED_QT_VERSION}")
+
+    if(ECM_FOUND)
+        include(ECMPoQmTools)
+    endif()
 else ()
     macro_log_feature(QT_QTOPENGL_FOUND "Qt4 OpenGL" "Qt4 OpenGL support is required to compile the gstreamer backend for Phonon" "" FALSE)
 endif()
@@ -54,5 +58,9 @@ find_package(LibXml2 REQUIRED)
 macro_log_feature(LIBXML2_FOUND "LibXml2" "LibXml2 is required to compile the gstreamer backend for Phonon" "http://xmlsoft.org/downloads.html" TRUE)
 
 add_subdirectory(gstreamer)
+
+if(ECM_FOUND AND IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/po")
+    ecm_install_po_files_as_qm(po)
+endif()
 
 macro_display_feature_log()
