port to phonon 4.11, qt5, ecm
Summary:
- move to featuresummary
-- this requires fairly awkward trickery for the plugins because of the
  way the plugin finder works (which is to say it doesn't as far as
  cmake is concerned). the plugins we want now have noop finder files
  (so cmake doesn't outright consider the packages not found) and then
  the variable set by the actual finder can be eval'd by featuresummary.
  this really should get refactored to "proper" cmake use of finder
  packages
- install icons via ecm_install_icons
- use imported targets where possible and appropriate

Test Plan: builds

Reviewers: dvratil

Reviewed By: dvratil

Differential Revision: https://phabricator.kde.org/D22826

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,66 +1,121 @@
-cmake_minimum_required(VERSION 2.8.9)
-project(PhononGStreamer)
+cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
+project(PhononGStreamer VERSION 0.10.60)
 
 option(USE_INSTALL_PLUGIN "Use GStreamer codec installation API" TRUE)
 
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+include(FeatureSummary)
 
-set(PHONON_GST_MAJOR_VERSION "4")
-set(PHONON_GST_MINOR_VERSION "9")
-set(PHONON_GST_PATCH_VERSION "1")
-set(PHONON_GST_VERSION "${PHONON_GST_MAJOR_VERSION}.${PHONON_GST_MINOR_VERSION}.${PHONON_GST_PATCH_VERSION}")
+# ECM
+find_package(ECM 5.60 NO_MODULE)
+set_package_properties(ECM PROPERTIES
+    TYPE REQUIRED
+    DESCRIPTION "Extra CMake Modules"
+    URL "https://api.kde.org/frameworks/extra-cmake-modules/html/index.html")
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${ECM_MODULE_PATH} ${ECM_KDE_MODULE_DIR})
+
+include(KDEInstallDirs)
+include(ECMPoQmTools)
+include(KDECMakeSettings)
+include(KDECompilerSettings)
+include(ECMSetupVersion)
+include(ECMInstallIcons)
+
+ecm_setup_version(PROJECT VARIABLE_PREFIX PHONON_GST)
 
 add_definitions(-DPHONON_GST_VERSION="${PHONON_GST_VERSION}")
 
-find_package(Phonon REQUIRED)
-macro_ensure_version("4.7.0" ${PHONON_VERSION} PHONON_FOUND)
-macro_log_feature(PHONON_FOUND "Phonon" "Core Library" "git://anongit.kde.org/phonon.git" TRUE "4.7.0")
+# Phonon
+find_package(Phonon4Qt5 4.10.60 NO_MODULE)
+set_package_properties(Phonon4Qt5 PROPERTIES
+    TYPE REQUIRED
+    DESCRIPTION "Phonon core library"
+    URL "https://api.kde.org/phonon/html/index.html")
+
+find_package(Phonon4Qt5Experimental 4.10.60 NO_MODULE)
+set_package_properties(Phonon4Qt5Experimental PROPERTIES
+    TYPE OPTIONAL
+    DESCRIPTION "Phonon experimental library"
+    URL "https://api.kde.org/phonon/html/index.html")
+if(Phonon4Qt5Experimental_FOUND)
+    set(PHONON_EXPERIMENTAL TRUE)
+endif()
 
 find_package(OpenGL)
-macro_log_feature(OPENGL_FOUND "OpenGL" "OpenGL support is required to compile the gstreamer backend for Phonon" "" FALSE)
+set_package_properties(OpenGL PROPERTIES
+    TYPE OPTIONAL
+    PURPOSE "OpenGL support is required to compile the gstreamer backend for Phonon")
 
-if(PHONON_BUILD_PHONON4QT5)
-    find_package(Qt5OpenGL)
-    macro_log_feature(Qt5OpenGL_FOUND "Qt5 OpenGL" "Qt5 OpenGL support is required to compile the gstreamer backend for Phonon" "" FALSE)
-    set(QT_QTOPENGL_FOUND Qt5OpenGL_FOUND)
+find_package(Qt5OpenGL)
+set_package_properties(Qt5OpenGL PROPERTIES
+    TYPE OPTIONAL
+    PURPOSE "Qt5 OpenGL support is required to compile the gstreamer backend for Phonon")
+set(QT_QTOPENGL_FOUND Qt5OpenGL_FOUND)
 
-    set(REQUIRED_QT_VERSION 5.2.0)
-    macro_optional_find_package(Qt5X11Extras ${REQUIRED_QT_VERSION})
-    macro_log_feature(Qt5X11Extras_FOUND "Qt5X11Extras" "Qt5X11Extras is needed for the x11renderer" "http://doc.qt.io/qt-5/qtx11extras-index.html" FALSE "${REQUIRED_QT_VERSION}")
+set(REQUIRED_QT_VERSION 5.2.0)
+find_package(Qt5X11Extras ${REQUIRED_QT_VERSION})
+set_package_properties(Qt5OpenGL PROPERTIES
+    TYPE OPTIONAL
+    PURPOSE "Qt5X11Extras is needed for the x11renderer"
+    URL "http://doc.qt.io/qt-5/qtx11extras-index.html")
 
-    if(ECM_FOUND)
-        include(ECMPoQmTools)
-    endif()
-else ()
-    macro_log_feature(QT_QTOPENGL_FOUND "Qt4 OpenGL" "Qt4 OpenGL support is required to compile the gstreamer backend for Phonon" "" FALSE)
-endif()
+include(ECMPoQmTools)
 
 if (NOT QT_QTOPENGL_FOUND)
     set(OPENGL_FOUND FALSE)
 endif ()
 
-add_definitions(${QT_DEFINITIONS})
-include_directories(${PHONON_INCLUDES} ${QT_INCLUDES})
+include_directories(${PHONON_INCLUDES})
 
-find_package(GStreamer REQUIRED)
-find_package(GStreamerPlugins REQUIRED)
-macro_log_feature(GSTREAMER_FOUND "GStreamer" "gstreamer 1.0 is required for the multimedia backend" "http://gstreamer.freedesktop.org/modules/" TRUE "1.0")
-macro_log_feature(GSTREAMER_PLUGIN_VIDEO_FOUND "GStreamer video plugin" "The gstreamer video plugin (part of gstreamer-plugins-base 1.0) is required for the multimedia gstreamer backend" "http://gstreamer.freedesktop.org/modules/" TRUE "1.0")
-macro_log_feature(GSTREAMER_PLUGIN_AUDIO_FOUND "GStreamer audio plugin" "The gstreamer audio plugin (part of gstreamer-plugins-base 1.0) is required for the multimedia gstreamer backend" "http://gstreamer.freedesktop.org/modules/" TRUE "1.0")
-macro_log_feature(GSTREAMER_PLUGIN_PBUTILS_FOUND "GStreamer pbutils plugin" "The gstreamer pbutils plugin (part of gstreamer-plugins-base 1.0) is required for the multimedia gstreamer backend" "http://gstreamer.freedesktop.org/modules/" TRUE "1.0")
+find_package(GStreamer 1.0)
+set_package_properties(GSTREAMER PROPERTIES
+    TYPE REQUIRED
+    DESCRIPTION "GStreamer"
+    PURPOSE "gstreamer 1.0 is required for the multimedia backend"
+    URL "http://gstreamer.freedesktop.org/modules/")
+find_package(GStreamerPlugins QUIET 1.0)
+# They way GStreamerPlugins works is super crappy form a cmake POV. To
+# get it to play nice with FeatureSummary we'll look for a bunch of fake
+# packages which are in fact set by GStreamerPlugins.
+find_package(GSTREAMER_PLUGIN_VIDEO)
+find_package(GSTREAMER_PLUGIN_AUDIO)
+find_package(GSTREAMER_PLUGIN_PBUTILS)
+set_package_properties(GSTREAMER_PLUGIN_VIDEO PROPERTIES
+    TYPE RUNTIME
+    DESCRIPTION "GStreamer video plugin"
+    PURPOSE "The gstreamer video plugin (part of gstreamer-plugins-base 1.0) is required for the multimedia gstreamer backend"
+    URL "http://gstreamer.freedesktop.org/modules/")
+set_package_properties(GSTREAMER_PLUGIN_AUDIO PROPERTIES
+    TYPE RUNTIME
+    DESCRIPTION "GStreamer audio plugin"
+    PURPOSE "The gstreamer video plugin (part of gstreamer-plugins-base 1.0) is required for the multimedia gstreamer backend"
+    URL "http://gstreamer.freedesktop.org/modules/")
+set_package_properties(GSTREAMER_PLUGIN_PBUTILS PROPERTIES
+    TYPE RUNTIME
+    DESCRIPTION "GStreamer pbutils plugin"
+    PURPOSE "The gstreamer pbutils plugin (part of gstreamer-plugins-base 1.0) is required for the multimedia gstreamer backend"
+    URL "http://gstreamer.freedesktop.org/modules/")
 
-find_package(GLIB2 REQUIRED)
-macro_log_feature(GLIB2_FOUND "GLib2" "GLib 2 is required to compile the gstreamer backend for Phonon" "http://www.gtk.org/download/" TRUE)
+find_package(GLIB2)
+set_package_properties(GLIB2 PROPERTIES
+    TYPE REQUIRED
+    DESCRIPTION "GLib2"
+    PURPOSE "GLib 2 is required to compile the gstreamer backend for Phonon"
+    URL "http://www.gtk.org/download/")
 
 find_package(GObject REQUIRED)
 
 find_package(LibXml2 REQUIRED)
-macro_log_feature(LIBXML2_FOUND "LibXml2" "LibXml2 is required to compile the gstreamer backend for Phonon" "http://xmlsoft.org/downloads.html" TRUE)
+set_package_properties(LibXml2 PROPERTIES
+    TYPE REQUIRED
+    DESCRIPTION "LibXml2"
+    PURPOSE "LibXml2 is required to compile the gstreamer backend for Phonon"
+    URL "http://xmlsoft.org/downloads.html")
 
 add_subdirectory(gstreamer)
 
-if(ECM_FOUND AND IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/po")
+if(IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/po")
     ecm_install_po_files_as_qm(po)
 endif()
 
-macro_display_feature_log()
+feature_summary(WHAT ALL FATAL_ON_MISSING_REQUIRED_PACKAGES)
