--- a/gstreamer/icons/CMakeLists.txt
+++ b/gstreamer/icons/CMakeLists.txt
@@ -1,2 +1,8 @@
-phonon_install_icons(${ICON_INSTALL_DIR})
-phonon_update_iconcache()
+ecm_install_icons(ICONS
+    128-apps-phonon-gstreamer.png
+    16-apps-phonon-gstreamer.png
+    22-apps-phonon-gstreamer.png
+    48-apps-phonon-gstreamer.png
+    64-apps-phonon-gstreamer.png
+    sc-apps-phonon-gstreamer.svg
+    DESTINATION ${ICON_INSTALL_DIR})
