--- a/gstreamer/icons/CMakeLists.txt
+++ b/gstreamer/icons/CMakeLists.txt
@@ -5,4 +5,4 @@ ecm_install_icons(ICONS
     48-apps-phonon-gstreamer.png
     64-apps-phonon-gstreamer.png
     sc-apps-phonon-gstreamer.svg
-    DESTINATION ${ICON_INSTALL_DIR})
+    DESTINATION ${KDE_INSTALL_ICONDIR})
