--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,8 +114,6 @@ set_package_properties(LibXml2 PROPERTIES
 
 add_subdirectory(gstreamer)
 
-if(IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/po")
-    ecm_install_po_files_as_qm(po)
-endif()
+ecm_install_po_files_as_qm(poqm)
 
 feature_summary(WHAT ALL FATAL_ON_MISSING_REQUIRED_PACKAGES)
